Image overflow fix

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,6 +46,10 @@ article > h1 {
     margin-top: 1em;
 }
 
-article > section.title {
+article section.title {
     text-align: center;
+}
+
+article section.title > img {
+    max-width: 100%;
 }
